wip: rename folders

--- a/docs/tutorials/create-custom-application/react-application/homepage.mdx
+++ b/docs/tutorials/create-custom-application/react-application/homepage.mdx
@@ -25,7 +25,7 @@ In order to follow this tutorial, you must use Webiny version **5.15.0** or grea
 :::
 
 :::info
-The code that we cover in this section can also be found in our GitHub [examples repository](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/04-react-application/04.03-homepage). Also, if you'd like to see the complete and final code of the application we're building, check out the [`full-example`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/full-example) folder.
+The code that we cover in this section can also be found in our GitHub [examples repository](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/04-react-application/04-homepage). Also, if you'd like to see the complete and final code of the application we're building, check out the [`full-example`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/full-example) folder.
 :::
 
 
@@ -37,10 +37,10 @@ Like in the previous section, fetching the list of created pins can be easily do
 
 <CenteredImage src={pinterestMosaicLayout} alt="Pinterest - The Mosaic Layout"/>
 
-Luckily, we can achieve this pretty easily with a small React library called [`react-columned`](https://www.npmjs.com/package/react-columned), which we'll need to add to our React application. Once we have that, we can start working on our homepage by adjusting the existing [`Home`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.03-homepage/pinterest-clone/app/code/src/plugins/routes/home.tsx#L25) React component.
+Luckily, we can achieve this pretty easily with a small React library called [`react-columned`](https://www.npmjs.com/package/react-columned), which we'll need to add to our React application. Once we have that, we can start working on our homepage by adjusting the existing [`Home`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04-homepage/pinterest-clone/app/code/src/plugins/routes/home.tsx#L25) React component.
 
 :::note
-We already had a quick mention of the [`Home`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.01-layout/pinterest-clone/app/code/src/plugins/routes/home.tsx#L7) React component in the [Optional Steps](/docs/tutorials/create-custom-application/react-application/layout#optional-steps) section of the [Layout](/docs/tutorials/create-custom-application/react-application/layout) step.
+We already had a quick mention of the [`Home`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/02-layout/pinterest-clone/app/code/src/plugins/routes/home.tsx#L7) React component in the [Optional Steps](/docs/tutorials/create-custom-application/react-application/layout#optional-steps) section of the [Layout](/docs/tutorials/create-custom-application/react-application/layout) step.
 :::
 
 ## Creating the Homepage
@@ -51,7 +51,7 @@ For starters, let's add the mentioned [`react-columned`](https://www.npmjs.com/p
 yarn workspace pinterest-clone-app add react-columned
 ```
 
-Once we have that, we can start working on our homepage. The following is the final [`Home`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.03-homepage/pinterest-clone/app/code/src/plugins/routes/home.tsx#L25) React component that's responsible for rendering it, located in the [`pinterest-clone/app/code/src/plugins/routes/home.tsx`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.03-homepage/pinterest-clone/app/code/src/plugins/routes/home.tsx) file:
+Once we have that, we can start working on our homepage. The following is the final [`Home`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04-homepage/pinterest-clone/app/code/src/plugins/routes/home.tsx#L25) React component that's responsible for rendering it, located in the [`pinterest-clone/app/code/src/plugins/routes/home.tsx`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04-homepage/pinterest-clone/app/code/src/plugins/routes/home.tsx) file:
 
 ```tsx title="pinterest-clone/app/code/src/plugins/routes/home.tsx"
 import React from "react";
@@ -114,16 +114,16 @@ export default new RoutePlugin({
 ```
 
 :::note
-In order for the above code to work, make sure to copy and paste the [`blankImage.png`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.03-homepage/pinterest-clone/app/code/src/images/blankImage.png) file into the [`pinterest-clone/app/code/src/images`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.03-homepage/pinterest-clone/app/code/src/images) folder.
+In order for the above code to work, make sure to copy and paste the [`blankImage.png`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04-homepage/pinterest-clone/app/code/src/images/blankImage.png) file into the [`pinterest-clone/app/code/src/images`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04-homepage/pinterest-clone/app/code/src/images) folder.
 :::
 
 :::tip
-Notice how we've used the tilde (`~`) character to target the parent [`images`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/04-react-application/04.03-homepage/pinterest-clone/app/code/src/images) and [`components`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/04-react-application/04.03-homepage/pinterest-clone/app/code/src/components) folders. Using that instead of something like `../../../` can make our import statements easier to read and maintain.
+Notice how we've used the tilde (`~`) character to target the parent [`images`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/04-react-application/04-homepage/pinterest-clone/app/code/src/images) and [`components`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/04-react-application/04-homepage/pinterest-clone/app/code/src/components) folders. Using that instead of something like `../../../` can make our import statements easier to read and maintain.
 :::
 
-As we can see, the file contains the [`Home`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.03-homepage/pinterest-clone/app/code/src/plugins/routes/home.tsx#L25) React component, in which we're simply issuing the `ListPins` GraphQL query, and then, based on the received data, rendering each pin as an image and link to the **Pin Details** page (more on this soon). And, in order to achieve the mentioned mosaic layout, the pins are wrapped with the `Columned` component, imported from the added [`react-columned`](https://www.npmjs.com/package/react-columned) package.
+As we can see, the file contains the [`Home`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04-homepage/pinterest-clone/app/code/src/plugins/routes/home.tsx#L25) React component, in which we're simply issuing the `ListPins` GraphQL query, and then, based on the received data, rendering each pin as an image and link to the **Pin Details** page (more on this soon). And, in order to achieve the mentioned mosaic layout, the pins are wrapped with the `Columned` component, imported from the added [`react-columned`](https://www.npmjs.com/package/react-columned) package.
 
-Furthermore, note that, by default, the React application that's generated during the [Full Stack Application](/docs/how-to-guides/scaffolding/full-stack-application) scaffolding process uses [`@webiny/react-router`](https://github.com/webiny/webiny-js/tree/next/packages/react-router) library, which is a plugins-based React application router. In other words, all of the application routes are defined via [`RoutePlugin`](https://github.com/webiny/webiny-js/blob/v5.14.0/packages/app/src/plugins/RoutePlugin.tsx#L8) plugins, which is why we're exporting that instead of the actual [`Home`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.03-homepage/pinterest-clone/app/code/src/plugins/routes/home.tsx#L25) React component:
+Furthermore, note that, by default, the React application that's generated during the [Full Stack Application](/docs/how-to-guides/scaffolding/full-stack-application) scaffolding process uses [`@webiny/react-router`](https://github.com/webiny/webiny-js/tree/next/packages/react-router) library, which is a plugins-based React application router. In other words, all of the application routes are defined via [`RoutePlugin`](https://github.com/webiny/webiny-js/blob/v5.14.0/packages/app/src/plugins/RoutePlugin.tsx#L8) plugins, which is why we're exporting that instead of the actual [`Home`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04-homepage/pinterest-clone/app/code/src/plugins/routes/home.tsx#L25) React component:
 
 ```tsx title="pinterest-clone/app/code/src/plugins/routes/home.tsx"
 // We register routes via the `RoutePlugin` plugin.
@@ -132,7 +132,7 @@ export default new RoutePlugin({
 });
 ```
 
-All of these plugins are then registered in the [`pinterest-clone/app/code/src/plugins/index.ts`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.03-homepage/pinterest-clone/app/code/src/plugins/index.ts) plugins entrypoint file. For example, in case of the **Homepage**, we have the following:
+All of these plugins are then registered in the [`pinterest-clone/app/code/src/plugins/index.ts`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04-homepage/pinterest-clone/app/code/src/plugins/index.ts) plugins entrypoint file. For example, in case of the **Homepage**, we have the following:
 
 ```ts title="pinterest-clone/app/code/src/plugins/index.ts" {3,12}
 import { plugins } from "@webiny/plugins";
