--- a/docs/tutorials/create-custom-application/react-application/introduction.mdx
+++ b/docs/tutorials/create-custom-application/react-application/introduction.mdx
@@ -25,7 +25,7 @@ In order to follow this tutorial, you must use Webiny version **5.15.0** or grea
 :::
 
 :::info
-The code that we cover in this section can also be found in our GitHub [examples repository](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/04-react-application/04.00-introduction). Also, if you'd like to see the complete and final code of the application we're building, check out the [`full-example`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/full-example) folder.
+The code that we cover in this section can also be found in our GitHub [examples repository](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/04-react-application/01-introduction). Also, if you'd like to see the complete and final code of the application we're building, check out the [`full-example`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/full-example) folder.
 :::
 
 ## Overview
@@ -74,7 +74,7 @@ This is where we'll build our application and we'll build it in the following or
 
 ### 1. Application Layout
 
-By default, the created React application contains its own layout, styles and some components. So, we'll want to make some adaptations here, remove some existing code, and add some new. For example, we'll need to change the global [`Layout`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.00-introduction/pinterest-clone/app/code/src/components/Layout.tsx) component and related CSS styles. We'll also need to set up the mentioned [Ant Design](https://ant.design/docs/react/introduce) React library.
+By default, the created React application contains its own layout, styles and some components. So, we'll want to make some adaptations here, remove some existing code, and add some new. For example, we'll need to change the global [`Layout`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/01-introduction/pinterest-clone/app/code/src/components/Layout.tsx) component and related CSS styles. We'll also need to set up the mentioned [Ant Design](https://ant.design/docs/react/introduce) React library.
 
 ### 2. New Pin Modal Dialog
 
