--- a/docs/tutorials/create-custom-application/react-application/layout.mdx
+++ b/docs/tutorials/create-custom-application/react-application/layout.mdx
@@ -24,7 +24,7 @@ In order to follow this tutorial, you must use Webiny version **5.15.0** or grea
 :::
 
 :::info
-The code that we cover in this section can also be found in our GitHub [examples repository](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/04-react-application/04.01-layout). Also, if you'd like to see the complete and final code of the application we're building, check out the [`full-example`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/full-example) folder.
+The code that we cover in this section can also be found in our GitHub [examples repository](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/04-react-application/02-layout). Also, if you'd like to see the complete and final code of the application we're building, check out the [`full-example`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/full-example) folder.
 :::
 
 ## Ant Design Library
@@ -41,7 +41,7 @@ yarn workspace pinterest-clone-app add antd
 Notice how we had to run the [`yarn workspace`](https://classic.yarnpkg.com/en/docs/cli/workspace/) command and specify the workspace name (`pinterest-clone-app`) in order to add the [`antd`](https://www.npmjs.com/package/antd) NPM package. This is because every Webiny project is organized as a monorepo and can consist of multiple workspaces. To learn more, check out the [Monorepo Organization](/docs/key-topics/project-organization/monorepo-organization) key topic.
 :::
 
-Once the installation is complete, per the library [documentation](https://ant.design/docs/react/getting-started#2.-Use-and-modify-an-antd-component), we need to add the following import in our [`pinterest-clone/app/code/src/App.tsx`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.01-layout/pinterest-clone/app/code/src/App.tsx) file:
+Once the installation is complete, per the library [documentation](https://ant.design/docs/react/getting-started#2.-Use-and-modify-an-antd-component), we need to add the following import in our [`pinterest-clone/app/code/src/App.tsx`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/02-layout/pinterest-clone/app/code/src/App.tsx) file:
 
 ```tsx title="pinterest-clone/app/code/src/App.tsx" {9}
 import React from "react";
@@ -70,7 +70,7 @@ export const App = () => (
 ```
 
 :::info
-The [`pinterest-clone/app/code/src/App.tsx`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.01-layout/pinterest-clone/app/code/src/App.tsx) file contains the root [`App`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.01-layout/pinterest-clone/app/code/src/App.tsx#L13) React component. This is also usually the place where we configure different libraries, use different React provider components, and more.
+The [`pinterest-clone/app/code/src/App.tsx`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/02-layout/pinterest-clone/app/code/src/App.tsx) file contains the root [`App`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/02-layout/pinterest-clone/app/code/src/App.tsx#L13) React component. This is also usually the place where we configure different libraries, use different React provider components, and more.
 
 For more information, check out the [Essential Files and Folders](/docs/how-to-guides/scaffolding/react-application#essential-files-and-folders) section of the [React Application](/docs/how-to-guides/scaffolding/react-application#essential-files-and-folders) how-to guide.
 
@@ -80,13 +80,13 @@ Note that importing the library may visually disrupt the initial design of our a
 
 ## Layout
 
-The [`Layout`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.01-layout/pinterest-clone/app/code/src/components/Layout.tsx#L12) React component, located in the [`pinterest-clone/app/code/src/components/Layout.tsx`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.01-layout/pinterest-clone/app/code/src/components/Layout.tsx) file, is a global component which defines the default visual layout of our application. In terms of what we're building here, it should place the header bar at the top of the screen, and below it, render any React components that have been passed to it as its children.
+The [`Layout`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/02-layout/pinterest-clone/app/code/src/components/Layout.tsx#L12) React component, located in the [`pinterest-clone/app/code/src/components/Layout.tsx`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/02-layout/pinterest-clone/app/code/src/components/Layout.tsx) file, is a global component which defines the default visual layout of our application. In terms of what we're building here, it should place the header bar at the top of the screen, and below it, render any React components that have been passed to it as its children.
 
 <CenteredImage shadow={false} style={{maxWidth: 650 }} alt="Application Layout" src={applicationLayout} />
 
-By rendering all of our application's pages as children of the [`Layout`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.01-layout/pinterest-clone/app/code/src/components/Layout.tsx#L12) component, we ensure that every page is visually consistent. And, if we decide to make a change in the layout down the road, we can do it in a single React component, and all of the pages will be affected.
+By rendering all of our application's pages as children of the [`Layout`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/02-layout/pinterest-clone/app/code/src/components/Layout.tsx#L12) component, we ensure that every page is visually consistent. And, if we decide to make a change in the layout down the road, we can do it in a single React component, and all of the pages will be affected.
 
-Let's prepare the layout for our application by simply replacing the code in the existing [`pinterest-clone/app/code/src/components/Layout.tsx`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.01-layout/pinterest-clone/app/code/src/components/Layout.tsx) file with the following:
+Let's prepare the layout for our application by simply replacing the code in the existing [`pinterest-clone/app/code/src/components/Layout.tsx`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/02-layout/pinterest-clone/app/code/src/components/Layout.tsx) file with the following:
 
 ```tsx title="pinterest-clone/app/code/src/components/Layout.tsx"
 import React from "react";
@@ -124,20 +124,20 @@ export default Layout;
 ```
 
 :::note
-In order for the above code to work, make sure to copy and paste the [`logo.png`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.01-layout/pinterest-clone/app/code/src/images/logo.png) file into the [`pinterest-clone/app/code/src/images`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/04-react-application/04.01-layout/pinterest-clone/app/code/src/images) folder.
+In order for the above code to work, make sure to copy and paste the [`logo.png`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/02-layout/pinterest-clone/app/code/src/images/logo.png) file into the [`pinterest-clone/app/code/src/images`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/04-react-application/02-layout/pinterest-clone/app/code/src/images) folder.
 :::
 
 :::tip
-Notice how we've used the tilde (`~`) character to target the parent [`images`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.01-layout/pinterest-clone/app/code/src/images) folder upon importing the [`logo.png`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.01-layout/pinterest-clone/app/code/src/images/logo.png) image. Using that instead of something like `../../../` can make our import statements easier to read and maintain.
+Notice how we've used the tilde (`~`) character to target the parent [`images`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/02-layout/pinterest-clone/app/code/src/images) folder upon importing the [`logo.png`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/02-layout/pinterest-clone/app/code/src/images/logo.png) image. Using that instead of something like `../../../` can make our import statements easier to read and maintain.
 :::
 
-For now, this code will only render the [application logo](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.01-layout/pinterest-clone/app/code/src/images/logo.png) on the left side of the header. The **New Pin** and **User Menu** on the right, shown in the above layout diagram, will be added later, in the upcoming sections of this tutorial.
+For now, this code will only render the [application logo](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/02-layout/pinterest-clone/app/code/src/images/logo.png) on the left side of the header. The **New Pin** and **User Menu** on the right, shown in the above layout diagram, will be added later, in the upcoming sections of this tutorial.
 
 If you tried to view the results of what we've been doing so far, you'd still be looking at an application that's visually broken. This is because we're missing the last piece of the puzzle, and that is adjusting the global CSS styles.
 
 ## Global Styles
 
-Time to remove some of the styles that got automatically included in the generated React application. So, let's replace the code in [`pinterest-clone/app/code/src/styles/global.scss`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.01-layout/pinterest-clone/app/code/src/styles/global.scss) file with the following:
+Time to remove some of the styles that got automatically included in the generated React application. So, let's replace the code in [`pinterest-clone/app/code/src/styles/global.scss`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/02-layout/pinterest-clone/app/code/src/styles/global.scss) file with the following:
 
 ```scss title="pinterest-clone/app/code/src/styles/global.scss"
 // Styles for the global Layout component (components/Layout.tsx).
@@ -166,11 +166,11 @@ With this final step, we should have our application layout in place, and we sho
 
 ## Optional Steps
 
-An optional step that we could take here is cleaning up the [`Home`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.01-layout/pinterest-clone/app/code/src/plugins/routes/home.tsx#L7) component, located in the [`pinterest-clone/app/code/src/plugins/routes/home.tsx`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.01-layout/pinterest-clone/app/code/src/plugins/routes/home.tsx) file, and removing the [`UsefulLink`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.01-layout/pinterest-clone/app/code/src/plugins/routes/home/UsefulLink.tsx#L10) and [`UsefulLinks`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.01-layout/pinterest-clone/app/code/src/plugins/routes/home/UsefulLinks.tsx#L9) components, located in the [`pinterest-clone/app/code/src/plugins/routes/home`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.01-layout/pinterest-clone/app/code/src/plugins/routes/home) folder.
+An optional step that we could take here is cleaning up the [`Home`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/02-layout/pinterest-clone/app/code/src/plugins/routes/home.tsx#L7) component, located in the [`pinterest-clone/app/code/src/plugins/routes/home.tsx`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/02-layout/pinterest-clone/app/code/src/plugins/routes/home.tsx) file, and removing the [`UsefulLink`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/02-layout/pinterest-clone/app/code/src/plugins/routes/home/UsefulLink.tsx#L10) and [`UsefulLinks`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/02-layout/pinterest-clone/app/code/src/plugins/routes/home/UsefulLinks.tsx#L9) components, located in the [`pinterest-clone/app/code/src/plugins/routes/home`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/02-layout/pinterest-clone/app/code/src/plugins/routes/home) folder.
 
 All of these files were created during the scaffolding process, and basically they are irrelevant for our application. Alternatively, you could also move these files into a separate backup folder of your choice, possibly for future reference.
 
-Once cleaned up, the [`Home`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.01-layout/pinterest-clone/app/code/src/plugins/routes/home.tsx#L7) component might look something like the following:
+Once cleaned up, the [`Home`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/02-layout/pinterest-clone/app/code/src/plugins/routes/home.tsx#L7) component might look something like the following:
 
 ```tsx
 import React from "react";
