--- a/docs/tutorials/create-custom-application/react-application/new-pin-modal-dialog.mdx
+++ b/docs/tutorials/create-custom-application/react-application/new-pin-modal-dialog.mdx
@@ -25,7 +25,7 @@ In order to follow this tutorial, you must use Webiny version **5.15.0** or grea
 :::
 
 :::info
-The code that we cover in this section can also be found in our GitHub [examples repository](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/04-react-application/04.02-new-pin-modal-dialog). Also, if you'd like to see the complete and final code of the application we're building, check out the [`full-example`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/full-example) folder.
+The code that we cover in this section can also be found in our GitHub [examples repository](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/04-react-application/03-new-pin-modal-dialog). Also, if you'd like to see the complete and final code of the application we're building, check out the [`full-example`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/full-example) folder.
 :::
 
 ## Creating the New Pin Modal Dialog
@@ -34,7 +34,7 @@ It's time to create the **New Pin** modal dialog, which the users will open by c
 
 <CenteredImage src={plusHeaderButton} style={{ maxWidth: 650 }} alt="Open New Pin Modal Dialog" />
 
-For starters, let's create the [`NewPinModal`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.02-new-pin-modal-dialog/pinterest-clone/app/code/src/components/NewPinModal.tsx#L26) React component in the [`pinterest-clone/app/code/src/components/NewPinModal.tsx`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.02-new-pin-modal-dialog/pinterest-clone/app/code/src/components/NewPinModal.tsx) file:
+For starters, let's create the [`NewPinModal`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/03-new-pin-modal-dialog/pinterest-clone/app/code/src/components/NewPinModal.tsx#L26) React component in the [`pinterest-clone/app/code/src/components/NewPinModal.tsx`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/03-new-pin-modal-dialog/pinterest-clone/app/code/src/components/NewPinModal.tsx) file:
 
 ```tsx title="pinterest-clone/app/code/src/components/NewPinModal.tsx"
 import React, { useCallback } from "react";
@@ -123,7 +123,7 @@ For more information on Ant Design React library and all of the components in of
 
 Do note that the form in the modal dialog doesn't include the cover image field yet. We'll add this field later, when we'll be covering the file upload functionality.
 
-Finally, when it comes to interacting with our GraphQL API, in order to issue the [`CreatePin`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.02-new-pin-modal-dialog/pinterest-clone/app/code/src/components/NewPinModal.tsx#L9) GraphQL mutation, we're using [Apollo Client's](https://www.apollographql.com/docs/react/v2) [`useMutation`](https://www.apollographql.com/docs/react/v2/data/mutations/#executing-a-mutation) React hook.
+Finally, when it comes to interacting with our GraphQL API, in order to issue the [`CreatePin`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/03-new-pin-modal-dialog/pinterest-clone/app/code/src/components/NewPinModal.tsx#L9) GraphQL mutation, we're using [Apollo Client's](https://www.apollographql.com/docs/react/v2) [`useMutation`](https://www.apollographql.com/docs/react/v2/data/mutations/#executing-a-mutation) React hook.
 
 :::tip
 For the purposes of this tutorial, we've included all of the React component's code in a single file. But, you can reorganize the code into multiple files, if you prefer that.
@@ -134,7 +134,7 @@ For the purposes of this tutorial, we've included all of the React component's c
 
 Now that we have the **New Pin** modal dialog ready to go, let's create the mentioned **&#10753;** icon, which will enable users to actually open it.
 
-So, let's update the [`Layout`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.02-new-pin-modal-dialog/pinterest-clone/app/code/src/components/Layout.tsx#L12) component with the following lines of code:
+So, let's update the [`Layout`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/03-new-pin-modal-dialog/pinterest-clone/app/code/src/components/Layout.tsx#L12) component with the following lines of code:
 
 ```tsx title="pinterest-clone/app/code/src/components/Layout.tsx" {1,2,3,13,24-32}
 import React, { useState } from "react";
@@ -189,7 +189,7 @@ With all of the code updates in place, we should be able to see the **&#10753;**
 <CenteredImage src={newPinModalDialog} alt="New Pin Modal Dialog" />
 
 :::tip
-Once the form is submitted, the [`CreatePin`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.02-new-pin-modal-dialog/pinterest-clone/app/code/src/components/NewPinModal.tsx#L9) GraphQL mutation will be issued. If you're using a browser like [Google Chrome](https://www.google.com/chrome/index.html), you can see that via the Developer Tools's [Network](https://developer.chrome.com/docs/devtools/network/) tab.
+Once the form is submitted, the [`CreatePin`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/03-new-pin-modal-dialog/pinterest-clone/app/code/src/components/NewPinModal.tsx#L9) GraphQL mutation will be issued. If you're using a browser like [Google Chrome](https://www.google.com/chrome/index.html), you can see that via the Developer Tools's [Network](https://developer.chrome.com/docs/devtools/network/) tab.
 :::
 
 Note that, of course, since we didn't create the homepage yet, nothing will actually be shown on it after we've submitted the form. This is something we'll be covering in the next section.
