--- a/docs/tutorials/create-custom-application/react-application/pin-details-page.mdx
+++ b/docs/tutorials/create-custom-application/react-application/pin-details-page.mdx
@@ -25,7 +25,7 @@ In order to follow this tutorial, you must use Webiny version **5.15.0** or grea
 :::
 
 :::info
-The code that we cover in this section can also be found in our GitHub [examples repository](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/04-react-application/04.04-pin-details-page). Also, if you'd like to see the complete and final code of the application we're building, check out the [`full-example`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/full-example) folder.
+The code that we cover in this section can also be found in our GitHub [examples repository](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/04-react-application/05-pin-details-page). Also, if you'd like to see the complete and final code of the application we're building, check out the [`full-example`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/full-example) folder.
 :::
 
 ## Overview
@@ -43,7 +43,7 @@ For now, since we didn't cover security and file upload functionality yet, we'll
 
 ## Creating the Pin Details Page
 
-Unlike with the **Homepage**, where we already had some code in the already existing [`home.tsx`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.04-pin-details-page/pinterest-clone/app/code/src/plugins/routes/home.tsx) file, for the **Pin Details** page, we'll need to create a new [`pinDetails.tsx`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.04-pin-details-page/pinterest-clone/app/code/src/plugins/routes/pinDetails.tsx) file. The file will contain the [`PinDetails`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.04-pin-details-page/pinterest-clone/app/code/src/plugins/routes/pinDetails.tsx#L33) React component which we'll export via a new [`RoutePlugin`](https://github.com/webiny/webiny-js/blob/v5.14.0/packages/app/src/plugins/RoutePlugin.tsx#L8) plugin:
+Unlike with the **Homepage**, where we already had some code in the already existing [`home.tsx`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/05-pin-details-page/pinterest-clone/app/code/src/plugins/routes/home.tsx) file, for the **Pin Details** page, we'll need to create a new [`pinDetails.tsx`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/05-pin-details-page/pinterest-clone/app/code/src/plugins/routes/pinDetails.tsx) file. The file will contain the [`PinDetails`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/05-pin-details-page/pinterest-clone/app/code/src/plugins/routes/pinDetails.tsx#L33) React component which we'll export via a new [`RoutePlugin`](https://github.com/webiny/webiny-js/blob/v5.14.0/packages/app/src/plugins/RoutePlugin.tsx#L8) plugin:
 
 ```tsx title="pinterest-clone/app/code/src/plugins/routes/pinDetails.tsx"
 import React from "react";
@@ -127,13 +127,13 @@ export default new RoutePlugin({
 });
 ```
 
-Once we have that, the ID of the pin can be easily retrieved within our [`PinDetails`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.04-pin-details-page/pinterest-clone/app/code/src/plugins/routes/pinDetails.tsx#L33) React component, via `props.match.params.id`, for example:
+Once we have that, the ID of the pin can be easily retrieved within our [`PinDetails`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/05-pin-details-page/pinterest-clone/app/code/src/plugins/routes/pinDetails.tsx#L33) React component, via `props.match.params.id`, for example:
 
 ```tsx title="pinterest-clone/app/code/src/plugins/routes/pinDetails.tsx"
 const getPinQuery = useQuery(GET_PIN, { variables: { id: props.match.params.id } });
 ```
 
-Finally, in order to preserve type safety, notice how we've defined the [`PinDetails`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.04-pin-details-page/pinterest-clone/app/code/src/plugins/routes/pinDetails.tsx#L33) React component's props with the help of [`RouteChildrenProps`](https://github.com/DefinitelyTyped/DefinitelyTyped/blob/master/types/react-router/index.d.ts#L80) type:
+Finally, in order to preserve type safety, notice how we've defined the [`PinDetails`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/05-pin-details-page/pinterest-clone/app/code/src/plugins/routes/pinDetails.tsx#L33) React component's props with the help of [`RouteChildrenProps`](https://github.com/DefinitelyTyped/DefinitelyTyped/blob/master/types/react-router/index.d.ts#L80) type:
 
 ```tsx title="pinterest-clone/app/code/src/plugins/routes/pinDetails.tsx"
 type Props = RouteChildrenProps<{ id: string }>;
@@ -147,7 +147,7 @@ In case you missed it, the [`@webiny/react-router`](https://www.npmjs.com/packag
 
 ## Registering the `RoutePlugin` Plugin
 
-One last step we need to take here is register the exported [`RoutePlugin`](https://github.com/webiny/webiny-js/blob/v5.14.0/packages/app/src/plugins/RoutePlugin.tsx#L8) plugin in the [`pinterest-clone/app/code/src/plugins/index.ts`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.04-pin-details-page/pinterest-clone/app/code/src/plugins/index.ts). We can do that like so:
+One last step we need to take here is register the exported [`RoutePlugin`](https://github.com/webiny/webiny-js/blob/v5.14.0/packages/app/src/plugins/RoutePlugin.tsx#L8) plugin in the [`pinterest-clone/app/code/src/plugins/index.ts`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/05-pin-details-page/pinterest-clone/app/code/src/plugins/index.ts). We can do that like so:
 
 ```ts pinterest-clone/app/code/src/plugins/index.ts {4,14}
 import { plugins } from "@webiny/plugins";
@@ -174,7 +174,7 @@ Without doing this step, visiting the **Pin Details** page still wouldn't work. 
 
 If you tried to check the results of the changes we've done so far, in terms of the functionality, everything should work as expected. The only thing we could do here is add a bit of styling, just so the page looks a bit nicer and more polished.
 
-So let's create a new [`pinDetails.scss`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.04-pin-details-page/pinterest-clone/app/code/src/styles/pinDetails.scss) file in [`pinterest-clone/app/code/src/styles`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.04-pin-details-page/pinterest-clone/app/code/src/styles) and paste the following code into it:
+So let's create a new [`pinDetails.scss`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/05-pin-details-page/pinterest-clone/app/code/src/styles/pinDetails.scss) file in [`pinterest-clone/app/code/src/styles`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/05-pin-details-page/pinterest-clone/app/code/src/styles) and paste the following code into it:
 
 ```scss title="pinterest-clone/app/code/src/styles/pinDetails.scss"
 // Pin details page styles.
@@ -193,7 +193,7 @@ So let's create a new [`pinDetails.scss`](https://github.com/webiny/webiny-examp
 }
 ```
 
-Then, similarly to what we did in the previous [Registering the `RoutePlugin` Plugin](/docs/tutorials/create-custom-application/react-application/pin-details-page#registering-the-routeplugin-plugin) section, let's import this newly created file in the [`App.scss`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.04-pin-details-page/pinterest-clone/app/code/src/App.scss) file, like so:
+Then, similarly to what we did in the previous [Registering the `RoutePlugin` Plugin](/docs/tutorials/create-custom-application/react-application/pin-details-page#registering-the-routeplugin-plugin) section, let's import this newly created file in the [`App.scss`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/05-pin-details-page/pinterest-clone/app/code/src/App.scss) file, like so:
 
 ```scss title="pinterest-clone/app/code/src/App.scss" {4}
 // An entrypoint file that imports all styles your application might have.
